Fix scrollbar showing up when not needed

--- a/client/src/views/subPages/report/report.scss
+++ b/client/src/views/subPages/report/report.scss
@@ -9,7 +9,6 @@
   header{
     display: flex;
     flex-direction: column;
-    width: 100%;
     margin: var(--spacing-4);
 
 
